tests/tooling/fixtures/native/execution/negative/while_call_condition_body_return_conservative_reject.objc3
module WhileCallConditionBodyReturnConservativeReject;

fn predicate() -> i32 {
  return 1;
}

fn main() -> i32 {
  while (predicate()) {
    return 42;
  }
}
